some small changes on B1.2

--- a/resnet18.ipynb
+++ b/resnet18.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -40,6 +40,16 @@
      "output_type": "stream",
      "text": [
       "Using downloaded and verified file: /home/matthijs/.medmnist/retinamnist.npz\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/matthijs/anaconda3/lib/python3.9/site-packages/torchvision/models/_utils.py:208: UserWarning: The parameter 'pretrained' is deprecated since 0.13 and may be removed in the future, please use 'weights' instead.\n",
+      "  warnings.warn(\n",
+      "/home/matthijs/anaconda3/lib/python3.9/site-packages/torchvision/models/_utils.py:223: UserWarning: Arguments other than a weight enum or `None` for 'weights' are deprecated since 0.13 and may be removed in the future. The current behavior is equivalent to passing `weights=None`.\n",
+      "  warnings.warn(msg)\n"
      ]
     }
    ],
@@ -55,9 +65,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "torch.Size([3, 28, 28])\n",
+      "(2352,)\n"
+     ]
+    },
     {
      "name": "stderr",
      "output_type": "stream",
@@ -66,20 +84,12 @@
      ]
     },
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "torch.Size([3, 28, 28])\n",
-      "(28, 28, 3)\n"
-     ]
-    },
-    {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x7fc6977b7070>"
+       "<matplotlib.image.AxesImage at 0x7f61d08cd130>"
       ]
      },
-     "execution_count": 63,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -98,13 +108,13 @@
    ],
    "source": [
     "print((train_dataset)[0][0].shape)\n",
-    "print(np.array(train_dataset[10][0].T).shape)\n",
+    "print(np.array(train_dataset[10][0].flatten()).shape)\n",
     "plt.imshow(np.array(train_dataset[150][0].T))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -114,7 +124,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Algorithm B1\n",
+    "def compute_rc(gradients):\n",
+    "    rc = gradients/gradients[0]\n",
+    "    print(\"rc: \",rc)\n",
+    "    return rc\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Algorithm B2\n",
+    "def reconstruct_ym(gradients):\n",
+    "    print(gradients.shape)\n",
+    "    print(gradients[gradients < 0])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -125,7 +160,8 @@
     "    model.train()\n",
     "    for batch_idx, (inputs, targets) in enumerate(train_loader):\n",
     "        # print(f\"batch {batch_idx}:\",model.conv1.weight.grad)\n",
-    "        compute_rc(model.conv1.weight.grad)\n",
+    "        # compute_rc(model.conv1.weight.grad)\n",
+    "        reconstruct_ym(model.fc.weight.grad)\n",
     "        optimizer.zero_grad()\n",
     "        outputs = model(inputs.to(device))\n",
     "\n",
@@ -149,43 +185,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "  0%|          | 0/10 [00:00<?, ?it/s]"
+      "  0%|          | 0/1 [00:00<?, ?it/s]\n"
      ]
     },
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "rc: \n",
-      "rc: \n",
-      "rc: \n",
-      "rc: \n",
-      "rc: \n",
-      "rc: \n",
-      "rc: \n",
-      "rc: \n",
-      "rc: \n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      " 10%|█         | 1/10 [00:06<00:55,  6.19s/it]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "rc: \n"
+     "ename": "AttributeError",
+     "evalue": "'NoneType' object has no attribute 'shape'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "\u001b[1;32m/home/matthijs/DataReconstruction/resnet18.ipynb Cell 8\u001b[0m in \u001b[0;36m<cell line: 12>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     <a href='vscode-notebook-cell:/home/matthijs/DataReconstruction/resnet18.ipynb#X10sZmlsZQ%3D%3D?line=10'>11</a>\u001b[0m num_epochs \u001b[39m=\u001b[39m \u001b[39m1\u001b[39m\n\u001b[1;32m     <a href='vscode-notebook-cell:/home/matthijs/DataReconstruction/resnet18.ipynb#X10sZmlsZQ%3D%3D?line=11'>12</a>\u001b[0m \u001b[39mfor\u001b[39;00m epoch \u001b[39min\u001b[39;00m trange(num_epochs):\n\u001b[0;32m---> <a href='vscode-notebook-cell:/home/matthijs/DataReconstruction/resnet18.ipynb#X10sZmlsZQ%3D%3D?line=12'>13</a>\u001b[0m     train_loss \u001b[39m=\u001b[39m train(model, train_loader, task, criterion, optimizer, device, writer)\n",
+      "\u001b[1;32m/home/matthijs/DataReconstruction/resnet18.ipynb Cell 8\u001b[0m in \u001b[0;36mtrain\u001b[0;34m(model, train_loader, task, criterion, optimizer, device, writer)\u001b[0m\n\u001b[1;32m      <a href='vscode-notebook-cell:/home/matthijs/DataReconstruction/resnet18.ipynb#X10sZmlsZQ%3D%3D?line=4'>5</a>\u001b[0m model\u001b[39m.\u001b[39mtrain()\n\u001b[1;32m      <a href='vscode-notebook-cell:/home/matthijs/DataReconstruction/resnet18.ipynb#X10sZmlsZQ%3D%3D?line=5'>6</a>\u001b[0m \u001b[39mfor\u001b[39;00m batch_idx, (inputs, targets) \u001b[39min\u001b[39;00m \u001b[39menumerate\u001b[39m(train_loader):\n\u001b[1;32m      <a href='vscode-notebook-cell:/home/matthijs/DataReconstruction/resnet18.ipynb#X10sZmlsZQ%3D%3D?line=6'>7</a>\u001b[0m     \u001b[39m# print(f\"batch {batch_idx}:\",model.conv1.weight.grad)\u001b[39;00m\n\u001b[1;32m      <a href='vscode-notebook-cell:/home/matthijs/DataReconstruction/resnet18.ipynb#X10sZmlsZQ%3D%3D?line=7'>8</a>\u001b[0m     \u001b[39m# compute_rc(model.conv1.weight.grad)\u001b[39;00m\n\u001b[0;32m----> <a href='vscode-notebook-cell:/home/matthijs/DataReconstruction/resnet18.ipynb#X10sZmlsZQ%3D%3D?line=8'>9</a>\u001b[0m     reconstruct_ym(model\u001b[39m.\u001b[39;49mfc\u001b[39m.\u001b[39;49mweight\u001b[39m.\u001b[39;49mgrad)\n\u001b[1;32m     <a href='vscode-notebook-cell:/home/matthijs/DataReconstruction/resnet18.ipynb#X10sZmlsZQ%3D%3D?line=9'>10</a>\u001b[0m     optimizer\u001b[39m.\u001b[39mzero_grad()\n\u001b[1;32m     <a href='vscode-notebook-cell:/home/matthijs/DataReconstruction/resnet18.ipynb#X10sZmlsZQ%3D%3D?line=10'>11</a>\u001b[0m     outputs \u001b[39m=\u001b[39m model(inputs\u001b[39m.\u001b[39mto(device))\n",
+      "\u001b[1;32m/home/matthijs/DataReconstruction/resnet18.ipynb Cell 8\u001b[0m in \u001b[0;36mreconstruct_ym\u001b[0;34m(gradients)\u001b[0m\n\u001b[1;32m      <a href='vscode-notebook-cell:/home/matthijs/DataReconstruction/resnet18.ipynb#X10sZmlsZQ%3D%3D?line=1'>2</a>\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39mreconstruct_ym\u001b[39m(gradients):\n\u001b[0;32m----> <a href='vscode-notebook-cell:/home/matthijs/DataReconstruction/resnet18.ipynb#X10sZmlsZQ%3D%3D?line=2'>3</a>\u001b[0m     \u001b[39mprint\u001b[39m(gradients\u001b[39m.\u001b[39;49mshape)\n\u001b[1;32m      <a href='vscode-notebook-cell:/home/matthijs/DataReconstruction/resnet18.ipynb#X10sZmlsZQ%3D%3D?line=3'>4</a>\u001b[0m     \u001b[39mprint\u001b[39m(gradients[gradients \u001b[39m<\u001b[39m \u001b[39m0\u001b[39m])\n",
+      "\u001b[0;31mAttributeError\u001b[0m: 'NoneType' object has no attribute 'shape'"
      ]
     }
    ],
@@ -200,22 +220,9 @@
     "device = 'cpu'\n",
     "writer = SummaryWriter(log_dir=os.path.join(\"/home/matthijs/DataReconstruction/output_dir\", 'Tensorboard_Results'))\n",
     "iteration = 0\n",
-    "num_epochs = 10\n",
+    "num_epochs = 1\n",
     "for epoch in trange(num_epochs):\n",
     "    train_loss = train(model, train_loader, task, criterion, optimizer, device, writer)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 72,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Algorithm B1\n",
-    "def compute_rc(gradients):\n",
-    "    rc = gradients/gradients[0]\n",
-    "    print(\"rc: \",rc)\n",
-    "    return rc\n"
    ]
   },
   {
