Implemented B.2 & cleanup of unused libraries

--- a/fcn_pytorch.ipynb
+++ b/fcn_pytorch.ipynb
@@ -2,44 +2,36 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 145,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
-    "from collections import defaultdict\n",
     "from PIL import Image\n",
-    "import os\n",
-    "import argparse\n",
-    "import time\n",
     "from tqdm import trange\n",
     "from tensorboardX import SummaryWriter\n",
-    "from collections import OrderedDict\n",
-    "from torchsummary import summary\n",
     "\n",
     "import torch\n",
-    "import torchvision\n",
     "import torch.nn as nn\n",
     "import torch.optim as optim\n",
     "import torch.utils.data as data\n",
     "import torchvision.transforms as transforms\n",
     "\n",
     "import medmnist\n",
-    "from medmnist import RetinaMNIST\n",
-    "from medmnist import INFO, Evaluator"
+    "from medmnist import INFO"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 146,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Using downloaded and verified file: /home/matthijs/.medmnist/retinamnist.npz\n"
+      "Using downloaded and verified file: C:\\Users\\tjall\\.medmnist\\retinamnist.npz\n"
      ]
     }
    ],
@@ -55,16 +47,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 147,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "  0%|          | 0/1 [00:00<?, ?it/s]/tmp/ipykernel_30828/513797162.py:14: UserWarning: Implicit dimension choice for softmax has been deprecated. Change the call to include dim=X as an argument.\n",
+      "  0%|          | 0/1 [00:00<?, ?it/s]C:\\Users\\tjall\\AppData\\Local\\Temp\\ipykernel_71792\\513797162.py:14: UserWarning: Implicit dimension choice for softmax has been deprecated. Change the call to include dim=X as an argument.\n",
       "  x = self.softmax(x)\n",
-      "100%|██████████| 1/1 [00:00<00:00,  6.22it/s]\n"
+      "100%|██████████| 1/1 [00:00<00:00, 12.94it/s]\n"
      ]
     }
    ],
@@ -146,353 +138,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 174,
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def negative_indices(arr):\n",
+    "    result = np.zeros_like(arr)\n",
+    "    indices = np.where(arr < 0)\n",
+    "    result[indices] = indices\n",
+    "    return result\n",
+    "\n",
+    "def replace_non_negative(arr):\n",
+    "    result = np.copy(arr)\n",
+    "    first = result.flatten()[0]\n",
+    "    result[result >= 0] = first\n",
+    "    return result"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
+     "name": "stderr",
      "output_type": "stream",
      "text": [
-      "tensor([-4.4942e-03,  4.1298e-03,  7.9607e-05,  2.0829e-04,  7.6504e-05])\n",
-      "tensor([-1.6807e-03,  1.5444e-03,  2.9771e-05,  7.7893e-05,  2.8610e-05])\n",
-      "tensor([-4.4942e-03,  4.1298e-03,  7.9607e-05,  2.0829e-04,  7.6504e-05])\n",
-      "tensor([-1.6807e-03,  1.5444e-03,  2.9771e-05,  7.7893e-05,  2.8610e-05])\n",
-      "tensor([-4.4942e-03,  4.1298e-03,  7.9607e-05,  2.0829e-04,  7.6504e-05])\n",
-      "tensor([-1.6807e-03,  1.5444e-03,  2.9771e-05,  7.7893e-05,  2.8610e-05])\n",
-      "tensor([-4.4942e-03,  4.1298e-03,  7.9607e-05,  2.0829e-04,  7.6504e-05])\n",
-      "tensor([-1.6807e-03,  1.5444e-03,  2.9771e-05,  7.7893e-05,  2.8610e-05])\n",
-      "tensor([-4.4942e-03,  4.1298e-03,  7.9607e-05,  2.0829e-04,  7.6504e-05])\n",
-      "tensor([-1.6807e-03,  1.5444e-03,  2.9771e-05,  7.7893e-05,  2.8610e-05])\n",
-      "tensor([-4.4942e-03,  4.1298e-03,  7.9607e-05,  2.0829e-04,  7.6504e-05])\n",
-      "tensor([-1.6807e-03,  1.5444e-03,  2.9771e-05,  7.7893e-05,  2.8610e-05])\n",
-      "tensor([-4.4942e-03,  4.1298e-03,  7.9607e-05,  2.0829e-04,  7.6504e-05])\n",
-      "tensor([-1.6807e-03,  1.5444e-03,  2.9771e-05,  7.7893e-05,  2.8610e-05])\n",
-      "tensor([-4.4942e-03,  4.1298e-03,  7.9607e-05,  2.0829e-04,  7.6504e-05])\n",
-      "tensor([-1.6807e-03,  1.5444e-03,  2.9771e-05,  7.7893e-05,  2.8610e-05])\n",
-      "tensor([-4.4942e-03,  4.1298e-03,  7.9607e-05,  2.0829e-04,  7.6504e-05])\n",
-      "tensor([-1.6807e-03,  1.5444e-03,  2.9771e-05,  7.7893e-05,  2.8610e-05])\n",
-      "tensor([-4.4942e-03,  4.1298e-03,  7.9607e-05,  2.0829e-04,  7.6504e-05])\n",
-      "tensor([-1.6807e-03,  1.5444e-03,  2.9771e-05,  7.7893e-05,  2.8610e-05])\n",
-      "tensor(-0.0170)\n",
-      "tensor(-0.0170)\n",
-      "tensor(-0.0170)\n",
-      "tensor(-0.0170)\n",
-      "tensor(-0.0170)\n",
-      "tensor(-0.0170)\n",
-      "tensor(-0.0170)\n",
-      "tensor(-0.0170)\n",
-      "tensor(-0.0170)\n",
-      "tensor(-0.0170)\n",
-      "tensor(-0.0170)\n",
-      "tensor(-0.0170)\n",
-      "tensor(-0.0170)\n",
-      "tensor(-0.0170)\n",
-      "tensor(-0.0170)\n",
-      "tensor(-0.0170)\n",
-      "tensor(-0.0170)\n",
-      "tensor(-0.0170)\n",
-      "tensor(-0.0170)\n",
-      "tensor(-0.0170)\n",
-      "tensor(-0.0170)\n",
-      "tensor(-0.0170)\n",
-      "tensor(-0.0170)\n",
-      "tensor(-0.0170)\n",
-      "tensor(-0.0170)\n",
-      "tensor(-0.0170)\n",
-      "tensor(-0.0170)\n",
-      "tensor(-0.0170)\n",
-      "tensor(-0.0170)\n",
-      "tensor(-0.0170)\n",
-      "tensor(-0.0170)\n",
-      "tensor(-0.0170)\n",
-      "tensor(-0.0170)\n",
-      "tensor(-0.0170)\n",
-      "tensor(-0.0170)\n",
-      "tensor(-0.0170)\n",
-      "tensor(-0.0170)\n",
-      "tensor(-0.0170)\n",
-      "tensor(-0.0170)\n",
-      "tensor(-0.0170)\n",
-      "tensor(-0.0170)\n",
-      "tensor(-0.0170)\n",
-      "tensor(-0.0170)\n",
-      "tensor(-0.0170)\n",
-      "tensor(-0.0170)\n",
-      "tensor(-0.0170)\n",
-      "tensor(-0.0170)\n",
-      "tensor(-0.0170)\n",
-      "tensor(-0.0170)\n",
-      "tensor(-0.0170)\n",
-      "tensor(-0.0170)\n",
-      "tensor(-0.0170)\n",
-      "tensor(-0.0170)\n",
-      "tensor(-0.0170)\n",
-      "tensor(-0.0170)\n",
-      "tensor(-0.0170)\n",
-      "tensor(-0.0170)\n",
-      "tensor(-0.0170)\n",
-      "tensor(-0.0170)\n",
-      "tensor(-0.0170)\n",
-      "tensor(-0.0170)\n",
-      "tensor(-0.0170)\n",
-      "tensor(-0.0170)\n",
-      "tensor(-0.0170)\n",
-      "tensor(-0.0170)\n",
-      "tensor(-0.0170)\n",
-      "tensor(-0.0170)\n",
-      "tensor(-0.0170)\n",
-      "tensor(-0.0170)\n",
-      "tensor(-0.0170)\n",
-      "tensor(-0.0170)\n",
-      "tensor(-0.0170)\n",
-      "tensor(-0.0170)\n",
-      "tensor(-0.0170)\n",
-      "tensor(-0.0170)\n",
-      "tensor(-0.0170)\n",
-      "tensor(-0.0170)\n",
-      "tensor(-0.0170)\n",
-      "tensor(-0.0170)\n",
-      "tensor(-0.0170)\n",
-      "tensor(-0.0170)\n",
-      "tensor(-0.0170)\n",
-      "tensor(-0.0170)\n",
-      "tensor(-0.0170)\n",
-      "tensor(-0.0170)\n",
-      "tensor(-0.0170)\n",
-      "tensor(-0.0170)\n",
-      "tensor(-0.0170)\n",
-      "tensor(-0.0170)\n",
-      "tensor(-0.0170)\n",
-      "tensor(-0.0170)\n",
-      "tensor(-0.0170)\n",
-      "tensor(-0.0170)\n",
-      "tensor(-0.0170)\n",
-      "tensor(-0.0170)\n",
-      "tensor(-0.0170)\n",
-      "tensor(-0.0170)\n",
-      "tensor(-0.0170)\n",
-      "tensor(-0.0170)\n",
-      "tensor(-0.0170)\n",
-      "tensor(-0.0170)\n",
-      "tensor(-0.0170)\n",
-      "tensor(-0.0170)\n",
-      "tensor(-0.0170)\n",
-      "tensor(-0.0170)\n",
-      "tensor(-0.0170)\n",
-      "tensor(-0.0170)\n",
-      "tensor(-0.0170)\n",
-      "tensor(-0.0170)\n",
-      "tensor(-0.0170)\n",
-      "tensor(-0.0170)\n",
-      "tensor(-0.0170)\n",
-      "tensor(-0.0170)\n",
-      "tensor(-0.0170)\n",
-      "tensor(-0.0170)\n",
-      "tensor(-0.0170)\n",
-      "tensor(-0.0170)\n",
-      "tensor(-0.0170)\n",
-      "tensor(-0.0170)\n",
-      "tensor(-0.0170)\n",
-      "tensor(-0.0170)\n",
-      "tensor(-0.0170)\n",
-      "tensor(-0.0170)\n",
-      "tensor(-0.0170)\n",
-      "tensor(-0.0170)\n",
-      "tensor(-0.0170)\n",
-      "tensor(-0.0170)\n",
-      "tensor(-0.0170)\n",
-      "tensor(-0.0170)\n",
-      "tensor(-0.0170)\n",
-      "tensor(-0.0170)\n",
-      "tensor(-0.0170)\n",
-      "tensor(-0.0170)\n",
-      "tensor(-0.0170)\n",
-      "tensor(-0.0170)\n",
-      "tensor(-0.0170)\n",
-      "tensor(-0.0170)\n",
-      "tensor(-0.0170)\n",
-      "tensor(-0.0170)\n",
-      "tensor(-0.0170)\n",
-      "tensor(-0.0170)\n",
-      "tensor(-0.0170)\n",
-      "tensor(-0.0170)\n",
-      "tensor(-0.0170)\n",
-      "tensor(-0.0170)\n",
-      "tensor(-0.0170)\n",
-      "tensor(-0.0170)\n",
-      "tensor(-0.0170)\n",
-      "tensor(-0.0170)\n",
-      "tensor(-0.0170)\n",
-      "tensor(-0.0170)\n",
-      "tensor(-0.0170)\n",
-      "tensor(-0.0170)\n",
-      "tensor(-0.0170)\n",
-      "tensor(-0.0170)\n",
-      "tensor(-0.0170)\n",
-      "tensor(-0.0170)\n",
-      "tensor(-0.0170)\n",
-      "tensor(-0.0170)\n",
-      "tensor(-0.0170)\n",
-      "tensor(-0.0170)\n",
-      "tensor(-0.0170)\n",
-      "tensor(-0.0170)\n",
-      "tensor(-0.0170)\n",
-      "tensor(-0.0170)\n",
-      "tensor(-0.0170)\n",
-      "tensor(-0.0170)\n",
-      "tensor(-0.0170)\n",
-      "tensor(-0.0170)\n",
-      "tensor(-0.0170)\n",
-      "tensor(-0.0170)\n",
-      "tensor(-0.0170)\n",
-      "tensor(-0.0170)\n",
-      "tensor(-0.0170)\n",
-      "tensor(-0.0170)\n",
-      "tensor(-0.0170)\n",
-      "tensor(-0.0170)\n",
-      "tensor(-0.0170)\n",
-      "tensor(-0.0170)\n",
-      "tensor(-0.0170)\n",
-      "tensor(-0.0170)\n",
-      "tensor(-0.0170)\n",
-      "tensor(-0.0170)\n",
-      "tensor(-0.0170)\n",
-      "tensor(-0.0170)\n",
-      "tensor(-0.0170)\n",
-      "tensor(-0.0170)\n",
-      "tensor(-0.0170)\n",
-      "tensor(-0.0170)\n",
-      "tensor(-0.0170)\n",
-      "tensor(-0.0170)\n",
-      "tensor(-0.0170)\n",
-      "tensor(-0.0170)\n",
-      "tensor(-0.0170)\n",
-      "tensor(-0.0170)\n",
-      "tensor(-0.0170)\n",
-      "tensor(-0.0170)\n",
-      "tensor(-0.0170)\n",
-      "tensor(-0.0170)\n",
-      "tensor(-0.0170)\n",
-      "tensor(-0.0170)\n",
-      "tensor(-0.0170)\n",
-      "tensor(-0.0170)\n",
-      "tensor(-0.0170)\n",
-      "tensor(-0.0170)\n",
-      "tensor(-0.0170)\n",
-      "tensor(-0.0170)\n",
-      "tensor(-0.0170)\n",
-      "tensor(-0.0170)\n",
-      "tensor(-0.0170)\n",
-      "tensor(-0.0170)\n",
-      "tensor(-0.0170)\n",
-      "tensor(-0.0170)\n",
-      "tensor(-0.0170)\n",
-      "tensor(-0.0170)\n",
-      "tensor(-0.0170)\n",
-      "tensor(-0.0170)\n",
-      "tensor(-0.0170)\n",
-      "tensor(-0.0170)\n",
-      "tensor(-0.0170)\n",
-      "tensor(-0.0170)\n",
-      "tensor(-0.0170)\n",
-      "tensor(-0.0170)\n",
-      "tensor(-0.0170)\n",
-      "tensor(-0.0170)\n",
-      "tensor(-0.0170)\n",
-      "tensor(-0.0170)\n",
-      "tensor(-0.0170)\n",
-      "tensor(-0.0170)\n",
-      "tensor(-0.0170)\n",
-      "tensor(-0.0170)\n",
-      "tensor(-0.0170)\n",
-      "tensor(-0.0170)\n",
-      "tensor(-0.0170)\n",
-      "tensor(-0.0170)\n",
-      "tensor(-0.0170)\n",
-      "tensor(-0.0170)\n",
-      "tensor(-0.0170)\n",
-      "tensor(-0.0170)\n",
-      "tensor(-0.0170)\n",
-      "tensor(-0.0170)\n",
-      "tensor(-0.0170)\n",
-      "tensor(-0.0170)\n",
-      "tensor(-0.0170)\n",
-      "tensor(-0.0170)\n",
-      "tensor(-0.0170)\n",
-      "tensor(-0.0170)\n",
-      "tensor(-0.0170)\n",
-      "tensor(-0.0170)\n",
-      "tensor(-0.0170)\n",
-      "tensor(-0.0170)\n",
-      "tensor(-0.0170)\n",
-      "tensor(-0.0170)\n",
-      "tensor(-0.0170)\n",
-      "tensor(-0.0170)\n",
-      "tensor(-0.0170)\n",
-      "tensor(-0.0170)\n",
-      "tensor(-0.0170)\n",
-      "tensor(-0.0170)\n",
-      "tensor(-0.0170)\n",
-      "tensor(-0.0170)\n",
-      "tensor(-0.0170)\n",
-      "tensor(-0.0170)\n",
-      "tensor(-0.0170)\n",
-      "tensor(-0.0170)\n",
-      "tensor(-0.0170)\n",
-      "tensor(-0.0170)\n",
-      "tensor(-0.0170)\n",
-      "tensor(-0.0170)\n",
-      "tensor(-0.0170)\n",
-      "tensor(-0.0170)\n",
-      "tensor(-0.0170)\n",
-      "tensor(-0.0170)\n",
-      "tensor(-0.0170)\n",
-      "tensor(-0.0170)\n",
-      "tensor(-0.0170)\n",
-      "tensor(-0.0170)\n",
-      "tensor(-0.0170)\n",
-      "tensor(-0.0170)\n",
-      "tensor(-0.0170)\n",
-      "tensor(-0.0170)\n",
-      "tensor(-0.0170)\n",
-      "tensor(-0.0170)\n",
-      "tensor(-0.0170)\n",
-      "tensor(-0.0170)\n",
-      "tensor(-0.0170)\n",
-      "tensor(-0.0170)\n",
-      "tensor(-0.0170)\n",
-      "tensor(-0.0170)\n",
-      "tensor(-0.0170)\n",
-      "tensor(-0.0170)\n",
-      "tensor(-0.0170)\n",
-      "tensor(-0.0170)\n",
-      "tensor(-0.0170)\n",
-      "tensor(-0.0170)\n",
-      "tensor(-0.0170)\n",
-      "tensor(-0.0170)\n",
-      "tensor(-0.0170)\n",
-      "tensor(-0.0170)\n",
-      "tensor(-0.0170)\n",
-      "tensor(-0.0170)\n",
-      "tensor(-0.0170)\n",
-      "tensor(-0.0170)\n",
-      "tensor(-0.0170)\n",
-      "tensor(-0.0170)\n",
-      "tensor(-0.0170)\n",
-      "tensor(-0.0170)\n",
-      "tensor(-0.0170)\n",
-      "tensor(-0.0170)\n",
-      "tensor(-0.0170)\n",
-      "tensor(-0.0170)\n",
-      "tensor(-0.0170)\n",
-      "tensor(-0.0170)\n",
-      "tensor(-0.0170)\n",
-      "tensor(-0.0170)\n",
-      "tensor(-0.0170)\n",
-      "tensor(-0.0170)\n",
-      "tensor(-0.0170)\n",
-      "tensor(-0.0170)\n",
-      "tensor(-0.0170)\n"
+      "C:\\Users\\tjall\\AppData\\Local\\Temp\\ipykernel_71792\\259566053.py:18: RuntimeWarning: divide by zero encountered in divide\n",
+      "  delta = G1/GY\n",
+      "C:\\Users\\tjall\\AppData\\Local\\Temp\\ipykernel_71792\\259566053.py:18: RuntimeWarning: invalid value encountered in divide\n",
+      "  delta = G1/GY\n"
      ]
     }
    ],
@@ -503,12 +178,33 @@
     "            G1 = gradients_layer2[i][j][0,:]\n",
     "            Gc = gradients_layer2[i][j][c,:]\n",
     "            r = Gc/G1\n",
-    "            # print(r)\n",
+    "            #print(r)\n",
     "            r_diff = np.diff(r)\n",
+    "            #print(r_diff)\n",
     "            indices = np.argwhere(r_diff==0)\n",
+    "            #print(indices)\n",
     "\n",
-    "            for idx in indices[0]:\n",
-    "                print(gradients_layer2[i][j][:,idx])\n",
+    "            Y = negative_indices(Gc)\n",
+    "            GY = replace_non_negative(Gc)\n",
+    "            #print(GY)\n",
+    "            #print(Gc)\n",
+    "            \n",
+    "            delta = G1/GY\n",
+    "            #print(delta)\n",
+    "                \n",
+    "            #for idx in indices[5][10]:\n",
+    "                #print('hello')\n",
+    "                #print(gradients_layer2[i][j][:,idx])\n",
+    "\n",
+    "\n",
+    "\n",
+    "#print(gradients_layer1)\n",
+    "\n",
+    "#print(indices)\n",
+    "#print(Gc)\n",
+    "\n",
+    "# for j in range(num_batches):\n",
+    "#     Gc[num_epochs][j]\n",
     "\n",
     "# for i in range(5):\n",
     "#     for j in range(64):\n",
@@ -540,7 +236,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.12"
+   "version": "3.9.16"
   },
   "orig_nbformat": 4
  },
