clean up repository

--- a/DataReconstruction.ipynb
+++ b/DataReconstruction.ipynb
@@ -76,33 +76,23 @@
     "    global iteration\n",
     "\n",
     "    model.train()\n",
-    "    # for batch_idx, (inputs, targets) in enumerate(train_loader):\n",
-    "    #     if batch_idx > num_batches: # for now, let's only look at two batches\n",
-    "    #         break\n",
-    "    optimizer.zero_grad()\n",
-    "    outputs = model(inputs.to(device))\n",
+    "    for batch_idx, (inputs, targets) in enumerate(train_loader):\n",
+    "        if batch_idx > 1: # for now, let's only look at one sample\n",
+    "            break\n",
+    "        optimizer.zero_grad()\n",
+    "        outputs = model(inputs.to(device))\n",
     "\n",
-    "    targets = torch.squeeze(targets, 1).long().to(device)\n",
-    "    loss = criterion(outputs, targets)\n",
+    "        targets = torch.squeeze(targets, 1).long().to(device)\n",
+    "        loss = criterion(outputs, targets)\n",
     "\n",
-    "    total_loss.append(loss.item())\n",
-    "    writer.add_scalar('train_loss_logs', loss.item())\n",
-    "    loss.backward()\n",
-    "    optimizer.step()\n",
-    "    G_layer1 = model.fc1.weight.grad\n",
-    "    G_layer2 = model.fc2.weight.grad\n",
-    "    G_layers = [G_layer1, G_layer2]\n",
-    "        # print(model.fc2.weight.grad[0])\n",
-    "    #     if batch_idx==0:\n",
-    "    #         G_layer1 = model.fc1.weight.grad\n",
-    "    #         G_layer2 = model.fc2.weight.grad\n",
-    "    #     else:\n",
-    "    #         G_layer1 += model.fc1.weight.grad\n",
-    "    #         G_layer2 += model.fc2.weight.grad\n",
-    "\n",
-    "    # G_layer1 /= num_batches\n",
-    "    # G_layer2 /= num_batches\n",
-    "    epoch_loss = sum(total_loss)/len(total_loss)\n",
+    "        total_loss.append(loss.item())\n",
+    "        writer.add_scalar('train_loss_logs', loss.item())\n",
+    "        loss.backward()\n",
+    "        optimizer.step()\n",
+    "        G_layer1 = model.fc1.weight.grad\n",
+    "        G_layer2 = model.fc2.weight.grad\n",
+    "        G_layers = [G_layer1, G_layer2]\n",
+    "        epoch_loss = sum(total_loss)/len(total_loss)\n",
     "    return epoch_loss, G_layers\n",
     "\n",
     "\n",
@@ -126,7 +116,6 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-
    "source": [
     "######################################################################################\n",
     "######################################################################################\n",
@@ -224,13 +213,6 @@
     "    return D\n",
     "D = determine_activation_pattern(G_layers, disjoint_index_groups, g, reconstructable_samples)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
